# bayes_team1

./: .gitignore  README.md  install.sh  jackal_setup.sh
catkin_ws/src/find_object_axis/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
catkin_ws/src/find_object_axis/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_ws/src/find_object_axis/catkin_generated/installspace/: find_object_axis.pc  find_object_axisConfig.cmake
catkin_ws/src/find_object_axis/src/: find_object_axis_node.cpp  find_object_axis_node_old.cpp
catkin_ws/src/ip_webcam/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/src/ip_webcam/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_ws/src/ip_webcam/catkin_generated/installspace/: _setup_util.py  ip_webcam.pc  ip_webcamConfig.cmake
catkin_ws/src/ip_webcam/catkin_generated/stamps/ip_webcam/: package.xml.stamp
catkin_ws/src/ip_webcam/gtest/: CTestTestfile.cmake  Makefile
catkin_ws/src/ip_webcam/launch/: find_object_2d.launch  ip_webcam.launch  topside_control.launch
catkin_ws/src/ip_webcam/rviz/: jackal_ip_view.rviz
catkin_ws/src/ip_webcam/src/: find_object_settings_ORB.ini  image_processor.cpp  ip_webcam_nerd.py  ip_webcam_node.cpp  joy_handler.py  kalman_processor.cpp  kalman_view.cpp  key_teleop.py  motion_tracking_node.py  movement_listener_node.py  object_tracker.cpp  odom_manager.cpp
catkin_ws/src/jackal_joy/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
catkin_ws/src/jackal_joy/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_ws/src/jackal_joy/catkin_generated/installspace/: jackal_joy.pc  jackal_joyConfig.cmake
catkin_ws/src/jackal_joy/launch/: jackal_joy.launch
catkin_ws/src/jackal_joy/src/: move_joy.py
catkin_ws/src/jackal_mbzirc/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/src/jackal_mbzirc/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_ws/src/jackal_mbzirc/catkin_generated/installspace/: jackal_mbzirc.pc  jackal_mbzircConfig.cmake
catkin_ws/src/jackal_mbzirc/cmake/: jackal_descriptionConfig.cmake
catkin_ws/src/jackal_mbzirc/launch/: description.launch
catkin_ws/src/jackal_mbzirc/urdf/: accessories.urdf.xacro  jackal.urdf.xacro
catkin_ws/src/jackal_mbzirc/urdf/accessories/: front_camera.urdf.xacro  kinect_camera.urdf.xacro  mover6.urdf.xacro
catkin_ws/src/mbzirc_task2/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
catkin_ws/src/mbzirc_task2/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  python_distutils_install.sh  safe_execute_install.cmake  setup_py_interrogation.cmake
catkin_ws/src/mbzirc_task2/catkin_generated/installspace/: mbzirc_task2.pc  mbzirc_task2Config.cmake  model_inst
catkin_ws/src/mbzirc_task2/catkin_generated/stamps/mbzirc_task2/: setup.py.stamp
catkin_ws/src/mbzirc_task2/launch/: env_mbzirc_task2.launch  find_object_2d.launch  jackal_accessories.launch  mbzirc_task2_sim.launch  mbzirc_task2_sim_kuri.launch  mbzirc_task2_sim_team2.launch  mover6.launch
catkin_ws/src/mbzirc_task2/models/5_8_wrench/: model-1_4.sdf  model.config  model.sdf
catkin_ws/src/mbzirc_task2/models/5_8_wrench/meshes/: 5_8_wrench.stl
catkin_ws/src/mbzirc_task2/models/challenge_1_plane/: model-1_4.sdf  model.config  model.sdf
catkin_ws/src/mbzirc_task2/models/challenge_1_plane/materials/scripts/: asphalt.material
catkin_ws/src/mbzirc_task2/models/challenge_1_road/: model.config  model.sdf
catkin_ws/src/mbzirc_task2/models/challenge_1_road/meshes/: challenge_1_road.stl
catkin_ws/src/mbzirc_task2/models/mover6/: convert.sh  model.config  model.sdf  model.urdf.xacro  model_1_1.sdf
catkin_ws/src/mbzirc_task2/models/team2/meshes/: arena.DAE
catkin_ws/src/mbzirc_task2/models/wrench_board/: model.config  model.sdf
catkin_ws/src/mbzirc_task2/models/wrench_board/materials/scripts/: wood_board.material
catkin_ws/src/mbzirc_task2/models/wrench_board/meshes/: MBZIRC_WrenchBoard.dae
catkin_ws/src/mbzirc_task2/rviz/: mbzirc.rviz
catkin_ws/src/mbzirc_task2/src/: cropper.cpp  image_processor.cpp  matrix_transform.cpp  wrench_linear_kalman.cpp  wrench_tf_transform.cpp
catkin_ws/src/mbzirc_task2/src/model_import/: model_inst.py
catkin_ws/src/mbzirc_task2/worlds/: jackal_race.world  mbzirc_task2.world
(+4 files in other folders)
